# cppstarter

./: .exrc  .gitignore  .template.cpp  CMakeLists.txt  Makefile  README.md  main.cpp
